fix: modified DE header margin so it will not overlap with the svg (#1060)

--- a/src/components/modal/v2/styles/components/_header.scss
+++ b/src/components/modal/v2/styles/components/_header.scss
@@ -280,7 +280,7 @@
 
             &.headline-de {
                 @include tablet {
-                    margin-right: 20px;
+                    margin-right: 102px;
                 }
 
                 @include mobile {
